# allwinner-hal

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: Cargo.yml  ci.yml  fmt-and-test.yml
allwinner-hal/: Cargo.toml
allwinner-hal/src/: ccu.rs  com.rs  gpio.rs  lib.rs  phy.rs  smhc.rs  spi.rs  sysctl.rs  twi.rs  uart.rs
allwinner-hal/src/ccu/: divide.rs  factor.rs  pll.rs  register.rs  source.rs
allwinner-hal/src/dma/: register.rs
allwinner-hal/src/gpio/: disabled.rs  eint.rs  flex_pad.rs  function.rs  input.rs  mod.rs  mode.rs  output.rs  pad.rs  pad_ext.rs  register.rs
allwinner-hal/src/ledc/: mod.rs  register.rs
allwinner-hal/src/smhc/: pad.rs  register.rs  structure.rs
allwinner-hal/src/spi/: blocking.rs  register.rs
allwinner-hal/src/uart/: blocking.rs  config.rs  mod.rs  register.rs
allwinner-hal/src/wafer/: d1.rs
allwinner-rt/: CHANGELOG.md  Cargo.toml  README.md  build.rs
allwinner-rt/examples/: fn-main.rs
allwinner-rt/macros/: Cargo.toml
allwinner-rt/macros/src/: lib.rs
allwinner-rt/src/: boot0.rs  lib.rs  macros.rs  mctl.rs  panic.rs
allwinner-rt/src/arch/: andes_a27l2.rs  riscv_fpu.rs  thead_c906.rs  thead_c907.rs  thead_e907.rs
allwinner-rt/src/soc/: d1.rs  v821.rs  v853.rs
allwinner-rt/src/soc/d1/: clock.rs  interrupt.rs  peripheral.rs
examples/: fn-main.rs
examples/nezha-d1/: Cargo.toml  README.md
examples/sdmmc/: Cargo.toml
examples/sdmmc/src/: main.rs
macros/: Cargo.toml
rfel/: Cargo.toml  README.md  plan.md
rfel/src/: consts.rs  lib.rs  main.rs  progress.rs  spi.rs  transfer.rs
rfel/src/chips/: d1.rs  mod.rs  payload.rs  util.rs
rfel/src/cli/: elf_to_bin.rs  mod.rs  patch.rs  util.rs
rfel/src/fel/: mod.rs  protocol.rs
rfel/src/ops/: chip.rs  flash.rs  mod.rs  spinand.rs  spinor.rs
src/: ccu.rs  gpio.rs  lib.rs  plic.rs  smhc.rs  spi.rs  uart.rs
src/wafer/: d1.rs
