[package]
name = "allwinner-rt"
description = "ROM runtime for Allwinner D1 chip"
version = "0.0.0"
authors = [
    "Luo Jia <luojia@hust.edu.cn>",
    "Gao Chengbo <electricpower_gao@163.com>",
]
documentation = "https://docs.rs/allwinner-rt"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["allwinner"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allwinner-rt-macros = { version = "0.0.0", path = "macros" }
allwinner-hal = { version = "0.0.0", features = ["d1"], path = "../allwinner-hal" }
embedded-hal = "1.0.0"
embedded-time = "0.12.1"
nb = "1.1.0"
plic = "0.0.2"

[features]
default = ["nezha"]
nezha = []
lichee = []
