[package]
name = "allwinner-rt"
description = "ROM runtime for Allwinner D1 chip"
version = "0.0.0"
authors = [
    "Luo Jia <luojia@hust.edu.cn>",
    "Gao Chengbo <electricpower_gao@163.com>",
]
documentation = "https://docs.rs/allwinner-rt"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["allwinner"]
categories = ["embedded", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allwinner-rt-macros = { version = "0.0.0", path = "macros" }
allwinner-hal = { version = "0.0.0", path = "../allwinner-hal" }
embedded-hal = "1.0.0"
embedded-time = "0.12.1"
nb = "1.1.0"
plic = "0.0.2"
cfg-if = "1.0"

[build-dependencies]
riscv-target-parser = "0.1.3"

[features]
default = ["nezha", "panic-halt"]
panic-halt = []

# SoC hart cluster specific features.
# D1-like chips: D1-H, D1s, F133. Only one cluster per chip.
d1 = ["thead-c906"]
# V821 chip. There are both CPU cluster and MCU cluster.
v821-cpu = ["andes-a27l2"]
v821-mcu = [] # TODO thead-e907

# Microarchitecture specific features.
andes-a27l2 = []
thead-c906 = []
thead-c907 = []

nezha = []
lichee = []
