[package]
name = "rfel"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
env_logger = "0.11.5"
futures = "0.3.31"
log = "0.4.22"
num-traits = "0.2.19"
nusb = "0.1.10"
