[package]
name = "nezha-d1-example"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
allwinner-hal = { path = "../../allwinner-hal", features = ["d1"] }
allwinner-rt = { path = "../../allwinner-rt", features = ["d1"] }
panic-halt = "0.2.0"
embedded-io = "0.6.1"
