[package]
name = "nezha-d1-example"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
allwinner-hal = { path = "../../allwinner-hal" }
allwinner-rt = { path = "../../allwinner-rt", features = ["d1", "panic-halt"] }
embedded-io = "0.6.1"
embedded-sdmmc = "0.9.0"
embedded-time = "0.12.1"

[lib]
name = "nezha_d1_example"
test = false
bench = false

[[bin]]
name = "lcpi-blinky"
test = false
bench = false

[[bin]]
name = "nezha-d1-blinky"
test = false
bench = false

[[bin]]
name = "uart"
test = false
bench = false

[[bin]]
name = "sdmmc"
test = false
bench = false
